fixed issue with article-content-container scrolling off screen

--- a/src/app/page/home-page/home-page.css
+++ b/src/app/page/home-page/home-page.css
@@ -18,10 +18,13 @@
   min-height: 85vh;
 }
 
-
-.article-content{
+#scrolling-content{
+  min-height: 85vh;
   max-height: 85vh;
   overflow: scroll;
+
 }
+
+@media (
 
 
